# PatternCAD

./: .gitignore  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  KEYBOARD_SHORTCUTS.md  LICENSE  README.md  build.sh  clean.sh  raccourcis Optitex  run.sh  test_simple.dxf  vcpkg.json
.claude/: settings.local.json
.github/workflows/: build.yml
bmad/: CHECKLIST.md  EXAMPLES.md  GETTING-STARTED.md  INDEX.md  README.md  STRUCTURE.txt  config.yaml
bmad/agents/: architect.yaml  dev.yaml  qa.yaml  scrum-master.yaml
bmad/prompts/: implement-story.md  review-code.md  sprint-status.md  test-story.md
bmad/workflows/: dev-story.yaml  review-story.yaml  update-sprint.yaml
cmake/: Packaging.cmake
docs/: FEATURES.md  TEST-PLAN.md  architecture-PatternCAD-2026-01-27.md  bmm-workflow-status.yaml  keyboard-shortcuts.md  prd-PatternCAD-2026-01-27.md  product-brief.md  sprint-status.yaml
docs/stories/epic-001/: story-001-01.md  story-001-02.md  story-001-03.md  story-001-04.md  story-001-05.md  story-001-06.md  story-001-07.md
docs/stories/epic-002/: story-002-01.md  story-002-02.md  story-002-03.md  story-002-04.md  story-002-05.md  story-002-06.md  story-002-07.md  story-002-08.md  story-002-09.md
docs/stories/epic-003/: story-003-01.md  story-003-02.md  story-003-03.md  story-003-04.md  story-003-05.md
docs/stories/epic-004/: story-004-01.md  story-004-02.md  story-004-03.md  story-004-04.md  story-004-05.md  story-004-06.md  story-004-07.md
docs/stories/epic-005/: story-005-01.md  story-005-02.md  story-005-03.md  story-005-04.md  story-005-05.md  story-005-06.md
docs/stories/epic-006/: story-006-01.md  story-006-02.md  story-006-03.md  story-006-04.md
docs/stories/epic-007/: story-007-01.md  story-007-02.md  story-007-03.md  story-007-04.md  story-007-05.md  story-007-06.md  story-007-07.md  story-007-08.md  story-007-09.md  story-007-10.md  story-007-11.md
docs/stories/epic-008/: story-008-01.md  story-008-02.md  story-008-03.md  story-008-04.md  story-008-05.md  story-008-06.md  story-008-07.md  story-008-08.md  story-008-09.md  story-008-10.md  story-008-11.md  story-008-12.md
packaging/linux/: postinst  postrm
packaging/windows/: deploy-windows.ps1
resources/: patterncad.desktop  patterncad.xml  resources.qrc
resources/icons/: README.md
src/: main.cpp
src/core/: Application.cpp  Application.h  AutoSaveManager.cpp  AutoSaveManager.h  Commands.cpp  Commands.h  Document.cpp  Document.h  GradingCommands.cpp  GradingCommands.h  Project.cpp  Project.h  SettingsManager.cpp  SettingsManager.h  Units.cpp  Units.h
src/geometry/: Circle.cpp  Circle.h  CubicBezier.cpp  CubicBezier.h  GeometryObject.cpp  GeometryObject.h  GradingSystem.cpp  GradingSystem.h  Line.cpp  Line.h  MatchPoint.cpp  MatchPoint.h  Notch.cpp  Notch.h  Point2D.cpp  Point2D.h  Polyline.cpp  Polyline.h  Rectangle.cpp  Rectangle.h  SeamAllowance.cpp  SeamAllowance.h
src/io/: DXFFormat.cpp  DXFFormat.h  FileFormat.cpp  FileFormat.h  NativeFormat.cpp  NativeFormat.h  PDFFormat.cpp  PDFFormat.h  SVGFormat.cpp  SVGFormat.h
src/tools/: AddPointOnContourTool.cpp  AddPointOnContourTool.h  CircleTool.cpp  CircleTool.h  LineTool.cpp  LineTool.h  MatchPointTool.cpp  MatchPointTool.h  MirrorTool.cpp  MirrorTool.h  NotchTool.cpp  NotchTool.h  PointTool.cpp  PointTool.h  PolylineTool.cpp  PolylineTool.h  RectangleTool.cpp  RectangleTool.h  RotateTool.cpp  RotateTool.h  ScaleTool.cpp  ScaleTool.h  SeamAllowanceTool.cpp  SeamAllowanceTool.h  SelectTool.cpp  SelectTool.h  Tool.cpp  Tool.h
src/ui/: Canvas.cpp  Canvas.h  DimensionInputOverlay.cpp  DimensionInputOverlay.h  DimensionInputWidget.cpp  DimensionInputWidget.h  DimensionRenderer.cpp  DimensionRenderer.h  GradingDialog.cpp  GradingDialog.h  KeyboardShortcutsDialog.cpp  KeyboardShortcutsDialog.h  LayersPanel.cpp  LayersPanel.h  MainWindow.cpp  MainWindow.h  ObjectsPanel.cpp  ObjectsPanel.h  ParametersPanel.cpp  ParametersPanel.h  PreferencesDialog.cpp  PreferencesDialog.h  PropertiesPanel.cpp  PropertiesPanel.h  RecoveryDialog.cpp  RecoveryDialog.h  ScalePatternDialog.cpp  ScalePatternDialog.h  SeamAllowanceWidget.cpp  SeamAllowanceWidget.h  ToolPalette.cpp  ToolPalette.h
tests/: CMakeLists.txt  test_constraints.cpp  test_fileio.cpp  test_geometry.cpp
